fixed styling on mobile view of cloudDesk

--- a/styles/cloudDeskStyles.css
+++ b/styles/cloudDeskStyles.css
@@ -16,7 +16,7 @@
   width: 95%;
 }
 
-#usabilityImages {
+#usabilityImages, #userInsights {
   margin-left: -3rem;
 }
 
